# pufferfish-vent-software

./: frontend_pb.ts
firmware/ventilator-controller-stm32/: .clang-tidy  CMakeLists.txt  README.md  cmake.sh  ventilator-controller-stm32 Debug.launch  ventilator-controller-stm32.ioc
firmware/ventilator-controller-stm32/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/: Statuses.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Application/: States.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Driver/I2C/: LMP91000.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Driver/Indicators/: ShiftRegister.h  ShiftedOutput.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Driver/Power/: PowerManager.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Driver/SPI/: BMP388.h  SPIFlash.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Driver/WatchDog/: STWD100.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/HAL/: CRCChecker.h  CRCChecker.tpp  HAL.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/HAL/Interfaces/: DigitalInput.h  DigitalOutput.h  I2CDevice.h  PWM.h  SPIDevice.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/HAL/Mock/: MockAnalogInput.h  MockDigitalInput.h  MockDigitalOutput.h  MockI2CDevice.h  MockPWM.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/HAL/STM32/: AnalogInput.h  DigitalInput.h  HALDigitalInput.h  HALDigitalOutput.h  HALPWM.h  HALSPIDevice.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Protocols/: CRCElements.tpp  Chunks.tpp  Datagrams.tpp  Messages.h  Messages.tpp  States.h  States.tpp
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Util/: Enums.h  Vector.h
firmware/ventilator-controller-stm32/Core/Src/: main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Application/: States.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Driver/BreathingCircuit/: Simulator.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Driver/Button/: Button.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Driver/I2C/: LMP91000.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Driver/Indicators/: ShiftRegister.cpp  ShiftedOutput.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Driver/Power/: PowerManager.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Driver/SPI/: BMP388.cpp  SPIFlash.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/HAL/Interfaces/: PWM.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/HAL/Mock/: MockAnalogInput.cpp  MockDigitalInput.cpp  MockDigitalOutput.cpp  MockI2CDevice.cpp  MockPWM.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/HAL/STM32/: AnalogInput.cpp  HALDigitalInput.cpp  HALDigitalOutput.cpp  HALI2CDevice.cpp  HALPWM.cpp  HALSPIDevice.cpp
firmware/ventilator-controller-stm32/Core/Test/Inc/Pufferfish/: BackendDefs.h
firmware/ventilator-controller-stm32/Core/Test/Inc/Pufferfish/Test/: BackendDefs.h  Util.h  Util.tpp
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/Driver/BreathingCircuit/: Algorithms.cpp  ControlLoop.cpp  Controller.cpp  ParametersService.cpp  Simulator.cpp
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/Driver/Button/: TestButton.cpp
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/Driver/I2C/: SensirionDevice.cpp
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/Driver/SPI/: TestBMP388.cpp
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/Driver/Serial/: TestFrameReceiver.cpp  (+2 more)
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/HAL/: CRCChecker.cpp
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/Protocols/: CRCElements.cpp  Chunks.cpp  Datagrams.cpp  Messages.cpp  States.cpp  chunks.txt  crcelements.txt  datagrams.txt  messages.txt  states.txt
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/Util/: Array.cpp  Bytes.cpp  COBS.cpp  Enums.cpp  Parse.cpp  RingBuffer.cpp  Vector.cpp
firmware/ventilator-controller-stm32/Docs/: BackendStateSync.mmd  ClassDiagram.md
(+84 files in other folders)
